--- a/css/style_timeline.css
+++ b/css/style_timeline.css
@@ -15,6 +15,7 @@
 .timeline p{
     margin: 0;
     font-size: 14px;
+    line-height: normal;
 }
  .timeline::before{
     content: "Education";
@@ -110,6 +111,9 @@
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 661px) {
     /* Place the timelime to the left */
+    .timeline{
+      width: 100%;
+    }
     .timeline::after {
     left: 31px;
     }
